# forms-skills

./: .envrc.example  .gitignore  .npmrc  .releaserc.base.json  CONTRIBUTING.md  README.md  forms-skills-issues.md  package-lock.json  package.json  pyproject.toml  workspace.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/: CONTRIBUTING.md
.github/workflows/: release.yml  validate.yml
docs/: content-authoring-skill-merge-plan.md
docs/skill-architecture/: README.md  directory-structure.md  skill-router-template.md
docs/superpowers/plans/: 2026-04-22-repo-restructure.md
evals/: package-lock.json  package.json
evals/fixtures/: content-model-contact-us.json  content-model-no-rules.json  content-model-registration.json  content-model-with-rule-refs.json  definition-dropdown.json  definition-slim.json  definition-telephoneinput.json  definition-textinput.json  ff-result-rules-found.json  ff-result-rules-not-found.json  merged-rule-invalid.json  merged-rule-valid.json  merged-rule-visible.json  page-content-clean.json  page-content-contact-us.json  page-content-minimal.json  page-content-no-email.json  pages-contact-us.json  rule-ast-broken-ref.json  rule-ast-change-valid.json  tree-contact-us.json  tree-registration.json
evals/scripts/: run-evals.js  run-llm-evals.js
forms-analysis/: SKILL.md
forms-build/: SKILL.md
forms-context/: SKILL.md
forms-enhancements/: claude-suggestions.md  eval-architecture-for-skills.md  forms-skills-issues.md  model-compatibility.md
forms-infra/: SKILL.md
forms-infra/scripts/: form-sync
forms-logic/scripts/: parse-functions  rule-save  rule-validate
forms-orchestrator/assets/: error-handling.md  routing-table.md
forms-shared/scripts/: python3
scripts/: prepare-release.sh
skills/aem/forms/: README.md  (+4 more)
skills/forms-analysis/: SKILL.md
skills/forms-content-author/: SKILL.md
skills/forms-context/: DEPS.yaml
skills/forms-context-management/: SKILL.md
skills/forms-infra/: SKILL.md
skills/forms-integration/: DEPS.yaml  SKILL.md
skills/forms-logic/: SKILL.md
skills/forms-orchestrator/: DEPS.yaml  README.md  SKILL.md  tutorial.md
skills/forms-rule-creator/: .npmrc  LICENSE  README.md  SKILL.md  build.mjs  package-lock.json  package.json
skills/forms-shared/: SKILL.md
(+366 files in other folders)
